# code-smell-detective

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
code_smell_detector/: __init__.py  config.py  core.py  data_models.py
code_smell_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code_smell_detector/analyzers/: base.py  class_level.py  duplication.py  method_level.py
code_smell_detector/cli/: main.py
code_smell_detector/metrics/: calculator.py
code_smell_detector/reporting/: json_reporter.py
code_smell_detector/samples/: code_smell_config.yaml  problematic_module.py
code_smell_reports/: analysis-report.json
examples/: sample_input.py
tests/: test_analyzers.py
