[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-smell-detector"
version = "0.1.0"
description = "Python application for detecting code smells in a codebase."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Code Smell Detective" }
]
dependencies = [
    "click>=8.1.7",
    "radon>=6.0.1",
    "pyyaml>=6.0.2",
    "pathspec>=0.12.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "coverage>=7.4",
    "mypy>=1.11",
    "ruff>=0.6.0"
]

[project.scripts]
code-smell-detector = "code_smell_detector.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
branch = true
source = ["code_smell_detector"]

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
line-length = 100

